# sample-poetry

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile
src/sample_poetry/: __init__.py  animal.py
tests/: test_sample_poetry.py
