[tool.poetry]
name = "sample-poetry"
version = "0.1.0"
description = "poetry sample project"
readme = "README.md"
authors = ["tknhs <kdsnlv0109@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest
# https://github.com/pytest-dev/pytest/wiki
testpaths = ["tests"]
addopts = "--durations=0 --junit-xml=tests/test-reports/test.xml"
