[tool.poetry]
name = "sample-poetry"
version = "0.1.0"
description = "poetry sample project"
readme = "README.md"
authors = ["tknhs <kdsnlv0109@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.2"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = {extras = ["pyproject"], version = "^5.8.0"}
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | tools
)/
| src/setup.py
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3
skip = [".bzr", ".direnv", ".eggs", ".git", ".hg",
        ".mypy_cache", ".nox", ".pants.d", ".svn",
        ".tox", ".venv", "_build", "buck-out", "build",
        "dist", "node_modules", "venv", "tools"]

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest
# https://github.com/pytest-dev/pytest/wiki
testpaths = ["tests"]
addopts = "--durations=0 --junit-xml=tests/test-reports/test.xml"
